ch3/y.output
Terminals which are not used

   LOW


Grammar

    0 $accept: program $end

    1 program: expression

    2 expression: INT
    3           | STRING
    4           | lvalue
    5           | NIL
    6           | LPAREN expression_sequence RPAREN
    7           | arithmetic_expression
    8           | selection
    9           | comparison
   10           | boolean
   11           | MINUS expression
   12           | function_call
   13           | record_creation
   14           | array_creation
   15           | assignment
   16           | loop
   17           | BREAK
   18           | LPAREN RPAREN
   19           | LET declaration_sequence IN END
   20           | LET declaration_sequence IN expression_sequence END

   21 declaration_sequence: /* empty */
   22                     | declaration declaration_sequence

   23 declaration: type_declaration
   24            | var_declaration
   25            | function_declaration

   26 type_declaration: TYPE ID EQ type

   27 type: ID
   28     | LBRACE tyfields RBRACE
   29     | ARRAY OF ID

   30 tyfields: /* empty */
   31         | type_field_sequence

   32 type_field_sequence: ID COLON ID
   33                    | type_field_sequence COMMA ID COLON ID

   34 var_declaration: VAR ID ASSIGN expression
   35                | VAR ID COLON ID ASSIGN expression

   36 function_declaration: FUNCTION ID LPAREN tyfields RPAREN EQ expression
   37                     | FUNCTION ID LPAREN tyfields RPAREN COLON ID EQ expression

   38 lvalue: ID
   39       | oneormore

   40 oneormore: one
   41          | oneormore DOT ID
   42          | oneormore LBRACK expression RBRACK

   43 one: ID DOT ID
   44    | ID LBRACK expression RBRACK

   45 expression_sequence: expression
   46                    | expression_sequence SEMICOLON expression

   47 arithmetic_expression: expression PLUS expression
   48                      | expression MINUS expression
   49                      | expression TIMES expression
   50                      | expression DIVIDE expression

   51 comparison: expression EQ expression
   52           | expression NEQ expression
   53           | expression GT expression
   54           | expression LT expression
   55           | expression GE expression
   56           | expression LE expression

   57 boolean: expression OR expression
   58        | expression AND expression

   59 selection: IF expression THEN expression ELSE expression
   60          | IF expression THEN expression

   61 function_call: ID LPAREN expression_list RPAREN

   62 expression_list: /* empty */
   63                | expression
   64                | expression COMMA expression_list

   65 record_creation: ID LBRACE field_list RBRACE

   66 field_list: /* empty */
   67           | ID EQ expression
   68           | field_list COMMA ID EQ expression

   69 array_creation: ID LBRACK expression RBRACK OF expression

   70 assignment: lvalue ASSIGN expression

   71 loop: WHILE expression DO expression
   72     | FOR ID ASSIGN expression TO expression DO expression


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 26 27 29 32 33 34 35 36 37 38 41 43 44 61 65 67 68 69 72
STRING (259) 3
INT (260) 2
COMMA (261) 33 64 68
COLON (262) 32 33 35 37
SEMICOLON (263) 46
LPAREN (264) 6 18 36 37 61
RPAREN (265) 6 18 36 37 61
LBRACK (266) 42 44 69
RBRACK (267) 42 44 69
LBRACE (268) 28 65
RBRACE (269) 28 65
DOT (270) 41 43
PLUS (271) 47
MINUS (272) 11 48
TIMES (273) 49
DIVIDE (274) 50
EQ (275) 26 36 37 51 67 68
NEQ (276) 52
LT (277) 54
LE (278) 56
GT (279) 53
GE (280) 55
AND (281) 58
OR (282) 57
ASSIGN (283) 34 35 70 72
ARRAY (284) 29
IF (285) 59 60
THEN (286) 59 60
ELSE (287) 59
WHILE (288) 71
FOR (289) 72
TO (290) 72
DO (291) 71 72
LET (292) 19 20
IN (293) 19 20
END (294) 19 20
OF (295) 29 69
BREAK (296) 17
NIL (297) 5
FUNCTION (298) 36 37
VAR (299) 34 35
TYPE (300) 26
LOW (301)
UMINUS (302)


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
program (49)
    on left: 1, on right: 0
expression (50)
    on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20,
    on right: 1 11 34 35 36 37 42 44 45 46 47 48 49 50 51 52 53 54
    55 56 57 58 59 60 63 64 67 68 69 70 71 72
declaration_sequence (51)
    on left: 21 22, on right: 19 20 22
declaration (52)
    on left: 23 24 25, on right: 22
type_declaration (53)
    on left: 26, on right: 23
type (54)
    on left: 27 28 29, on right: 26
tyfields (55)
    on left: 30 31, on right: 28 36 37
type_field_sequence (56)
    on left: 32 33, on right: 31 33
var_declaration (57)
    on left: 34 35, on right: 24
function_declaration (58)
    on left: 36 37, on right: 25
lvalue (59)
    on left: 38 39, on right: 4 70
oneormore (60)
    on left: 40 41 42, on right: 39 41 42
one (61)
    on left: 43 44, on right: 40
expression_sequence (62)
    on left: 45 46, on right: 6 20 46
arithmetic_expression (63)
    on left: 47 48 49 50, on right: 7
comparison (64)
    on left: 51 52 53 54 55 56, on right: 9
boolean (65)
    on left: 57 58, on right: 10
selection (66)
    on left: 59 60, on right: 8
function_call (67)
    on left: 61, on right: 12
expression_list (68)
    on left: 62 63 64, on right: 61 64
record_creation (69)
    on left: 65, on right: 13
field_list (70)
    on left: 66 67 68, on right: 65 68
array_creation (71)
    on left: 69, on right: 14
assignment (72)
    on left: 70, on right: 15
loop (73)
    on left: 71 72, on right: 16


state 0

    0 $accept: . program $end

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    program                go to state 12
    expression             go to state 13
    lvalue                 go to state 14
    oneormore              go to state 15
    one                    go to state 16
    arithmetic_expression  go to state 17
    comparison             go to state 18
    boolean                go to state 19
    selection              go to state 20
    function_call          go to state 21
    record_creation        go to state 22
    array_creation         go to state 23
    assignment             go to state 24
    loop                   go to state 25


state 1

   38 lvalue: ID .
   43 one: ID . DOT ID
   44    | ID . LBRACK expression RBRACK
   61 function_call: ID . LPAREN expression_list RPAREN
   65 record_creation: ID . LBRACE field_list RBRACE
   69 array_creation: ID . LBRACK expression RBRACK OF expression

    LPAREN  shift, and go to state 26
    LBRACK  shift, and go to state 27
    LBRACE  shift, and go to state 28
    DOT     shift, and go to state 29

    $default  reduce using rule 38 (lvalue)


state 2

    3 expression: STRING .

    $default  reduce using rule 3 (expression)


state 3

    2 expression: INT .

    $default  reduce using rule 2 (expression)


state 4

    6 expression: LPAREN . expression_sequence RPAREN
   18           | LPAREN . RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    RPAREN  shift, and go to state 30
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expression             go to state 31
    lvalue                 go to state 14
    oneormore              go to state 15
    one                    go to state 16
    expression_sequence    go to state 32
    arithmetic_expression  go to state 17
    comparison             go to state 18
    boolean                go to state 19
    selection              go to state 20
    function_call          go to state 21
    record_creation        go to state 22
    array_creation         go to state 23
    assignment             go to state 24
    loop                   go to state 25


state 5

   11 expression: MINUS . expression

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expression             go to state 33
    lvalue                 go to state 14
    oneormore              go to state 15
    one                    go to state 16
    arithmetic_expression  go to state 17
    comparison             go to state 18
    boolean                go to state 19
    selection              go to state 20
    function_call          go to state 21
    record_creation        go to state 22
    array_creation         go to state 23
    assignment             go to state 24
    loop                   go to state 25


state 6

   59 selection: IF . expression THEN expression ELSE expression
   60          | IF . expression THEN expression

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expression             go to state 34
    lvalue                 go to state 14
    oneormore              go to state 15
    one                    go to state 16
    arithmetic_expression  go to state 17
    comparison             go to state 18
    boolean                go to state 19
    selection              go to state 20
    function_call          go to state 21
    record_creation        go to state 22
    array_creation         go to state 23
    assignment             go to state 24
    loop                   go to state 25


state 7

   71 loop: WHILE . expression DO expression

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expression             go to state 35
    lvalue                 go to state 14
    oneormore              go to state 15
    one                    go to state 16
    arithmetic_expression  go to state 17
    comparison             go to state 18
    boolean                go to state 19
    selection              go to state 20
    function_call          go to state 21
    record_creation        go to state 22
    array_creation         go to state 23
    assignment             go to state 24
    loop                   go to state 25


state 8

   72 loop: FOR . ID ASSIGN expression TO expression DO expression

    ID  shift, and go to state 36


state 9

   19 expression: LET . declaration_sequence IN END
   20           | LET . declaration_sequence IN expression_sequence END

    FUNCTION  shift, and go to state 37
    VAR       shift, and go to state 38
    TYPE      shift, and go to state 39

    $default  reduce using rule 21 (declaration_sequence)

    declaration_sequence  go to state 40
    declaration           go to state 41
    type_declaration      go to state 42
    var_declaration       go to state 43
    function_declaration  go to state 44


state 10

   17 expression: BREAK .

    $default  reduce using rule 17 (expression)


state 11

    5 expression: NIL .

    $default  reduce using rule 5 (expression)


state 12

    0 $accept: program . $end

    $end  shift, and go to state 45


state 13

    1 program: expression .
   47 arithmetic_expression: expression . PLUS expression
   48                      | expression . MINUS expression
   49                      | expression . TIMES expression
   50                      | expression . DIVIDE expression
   51 comparison: expression . EQ expression
   52           | expression . NEQ expression
   53           | expression . GT expression
   54           | expression . LT expression
   55           | expression . GE expression
   56           | expression . LE expression
   57 boolean: expression . OR expression
   58        | expression . AND expression

    PLUS    shift, and go to state 46
    MINUS   shift, and go to state 47
    TIMES   shift, and go to state 48
    DIVIDE  shift, and go to state 49
    EQ      shift, and go to state 50
    NEQ     shift, and go to state 51
    LT      shift, and go to state 52
    LE      shift, and go to state 53
    GT      shift, and go to state 54
    GE      shift, and go to state 55
    AND     shift, and go to state 56
    OR      shift, and go to state 57

    $default  reduce using rule 1 (program)


state 14

    4 expression: lvalue .
   70 assignment: lvalue . ASSIGN expression

    ASSIGN  shift, and go to state 58

    $default  reduce using rule 4 (expression)


state 15

   39 lvalue: oneormore .
   41 oneormore: oneormore . DOT ID
   42          | oneormore . LBRACK expression RBRACK

    LBRACK  shift, and go to state 59
    DOT     shift, and go to state 60

    $default  reduce using rule 39 (lvalue)


state 16

   40 oneormore: one .

    $default  reduce using rule 40 (oneormore)


state 17

    7 expression: arithmetic_expression .

    $default  reduce using rule 7 (expression)


state 18

    9 expression: comparison .

    $default  reduce using rule 9 (expression)


state 19

   10 expression: boolean .

    $default  reduce using rule 10 (expression)


state 20

    8 expression: selection .

    $default  reduce using rule 8 (expression)


state 21

   12 expression: function_call .

    $default  reduce using rule 12 (expression)


state 22

   13 expression: record_creation .

    $default  reduce using rule 13 (expression)


state 23

   14 expression: array_creation .

    $default  reduce using rule 14 (expression)


state 24

   15 expression: assignment .

    $default  reduce using rule 15 (expression)


state 25

   16 expression: loop .

    $default  reduce using rule 16 (expression)


state 26

   61 function_call: ID LPAREN . expression_list RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    $default  reduce using rule 62 (expression_list)

    expression             go to state 61
    lvalue                 go to state 14
    oneormore              go to state 15
    one                    go to state 16
    arithmetic_expression  go to state 17
    comparison             go to state 18
    boolean                go to state 19
    selection              go to state 20
    function_call          go to state 21
    expression_list        go to state 62
    record_creation        go to state 22
    array_creation         go to state 23
    assignment             go to state 24
    loop                   go to state 25


state 27

   44 one: ID LBRACK . expression RBRACK
   69 array_creation: ID LBRACK . expression RBRACK OF expression

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expression             go to state 63
    lvalue                 go to state 14
    oneormore              go to state 15
    one                    go to state 16
    arithmetic_expression  go to state 17
    comparison             go to state 18
    boolean                go to state 19
    selection              go to state 20
    function_call          go to state 21
    record_creation        go to state 22
    array_creation         go to state 23
    assignment             go to state 24
    loop                   go to state 25


state 28

   65 record_creation: ID LBRACE . field_list RBRACE

    ID  shift, and go to state 64

    $default  reduce using rule 66 (field_list)

    field_list  go to state 65


state 29

   43 one: ID DOT . ID

    ID  shift, and go to state 66


state 30

   18 expression: LPAREN RPAREN .

    $default  reduce using rule 18 (expression)


state 31

   45 expression_sequence: expression .
   47 arithmetic_expression: expression . PLUS expression
   48                      | expression . MINUS expression
   49                      | expression . TIMES expression
   50                      | expression . DIVIDE expression
   51 comparison: expression . EQ expression
   52           | expression . NEQ expression
   53           | expression . GT expression
   54           | expression . LT expression
   55           | expression . GE expression
   56           | expression . LE expression
   57 boolean: expression . OR expression
   58        | expression . AND expression

    PLUS    shift, and go to state 46
    MINUS   shift, and go to state 47
    TIMES   shift, and go to state 48
    DIVIDE  shift, and go to state 49
    EQ      shift, and go to state 50
    NEQ     shift, and go to state 51
    LT      shift, and go to state 52
    LE      shift, and go to state 53
    GT      shift, and go to state 54
    GE      shift, and go to state 55
    AND     shift, and go to state 56
    OR      shift, and go to state 57

    $default  reduce using rule 45 (expression_sequence)


state 32

    6 expression: LPAREN expression_sequence . RPAREN
   46 expression_sequence: expression_sequence . SEMICOLON expression

    SEMICOLON  shift, and go to state 67
    RPAREN     shift, and go to state 68


state 33

   11 expression: MINUS expression .
   47 arithmetic_expression: expression . PLUS expression
   48                      | expression . MINUS expression
   49                      | expression . TIMES expression
   50                      | expression . DIVIDE expression
   51 comparison: expression . EQ expression
   52           | expression . NEQ expression
   53           | expression . GT expression
   54           | expression . LT expression
   55           | expression . GE expression
   56           | expression . LE expression
   57 boolean: expression . OR expression
   58        | expression . AND expression

    $default  reduce using rule 11 (expression)


state 34

   47 arithmetic_expression: expression . PLUS expression
   48                      | expression . MINUS expression
   49                      | expression . TIMES expression
   50                      | expression . DIVIDE expression
   51 comparison: expression . EQ expression
   52           | expression . NEQ expression
   53           | expression . GT expression
   54           | expression . LT expression
   55           | expression . GE expression
   56           | expression . LE expression
   57 boolean: expression . OR expression
   58        | expression . AND expression
   59 selection: IF expression . THEN expression ELSE expression
   60          | IF expression . THEN expression

    PLUS    shift, and go to state 46
    MINUS   shift, and go to state 47
    TIMES   shift, and go to state 48
    DIVIDE  shift, and go to state 49
    EQ      shift, and go to state 50
    NEQ     shift, and go to state 51
    LT      shift, and go to state 52
    LE      shift, and go to state 53
    GT      shift, and go to state 54
    GE      shift, and go to state 55
    AND     shift, and go to state 56
    OR      shift, and go to state 57
    THEN    shift, and go to state 69


state 35

   47 arithmetic_expression: expression . PLUS expression
   48                      | expression . MINUS expression
   49                      | expression . TIMES expression
   50                      | expression . DIVIDE expression
   51 comparison: expression . EQ expression
   52           | expression . NEQ expression
   53           | expression . GT expression
   54           | expression . LT expression
   55           | expression . GE expression
   56           | expression . LE expression
   57 boolean: expression . OR expression
   58        | expression . AND expression
   71 loop: WHILE expression . DO expression

    PLUS    shift, and go to state 46
    MINUS   shift, and go to state 47
    TIMES   shift, and go to state 48
    DIVIDE  shift, and go to state 49
    EQ      shift, and go to state 50
    NEQ     shift, and go to state 51
    LT      shift, and go to state 52
    LE      shift, and go to state 53
    GT      shift, and go to state 54
    GE      shift, and go to state 55
    AND     shift, and go to state 56
    OR      shift, and go to state 57
    DO      shift, and go to state 70


state 36

   72 loop: FOR ID . ASSIGN expression TO expression DO expression

    ASSIGN  shift, and go to state 71


state 37

   36 function_declaration: FUNCTION . ID LPAREN tyfields RPAREN EQ expression
   37                     | FUNCTION . ID LPAREN tyfields RPAREN COLON ID EQ expression

    ID  shift, and go to state 72


state 38

   34 var_declaration: VAR . ID ASSIGN expression
   35                | VAR . ID COLON ID ASSIGN expression

    ID  shift, and go to state 73


state 39

   26 type_declaration: TYPE . ID EQ type

    ID  shift, and go to state 74


state 40

   19 expression: LET declaration_sequence . IN END
   20           | LET declaration_sequence . IN expression_sequence END

    IN  shift, and go to state 75


state 41

   22 declaration_sequence: declaration . declaration_sequence

    FUNCTION  shift, and go to state 37
    VAR       shift, and go to state 38
    TYPE      shift, and go to state 39

    $default  reduce using rule 21 (declaration_sequence)

    declaration_sequence  go to state 76
    declaration           go to state 41
    type_declaration      go to state 42
    var_declaration       go to state 43
    function_declaration  go to state 44


state 42

   23 declaration: type_declaration .

    $default  reduce using rule 23 (declaration)


state 43

   24 declaration: var_declaration .

    $default  reduce using rule 24 (declaration)


state 44

   25 declaration: function_declaration .

    $default  reduce using rule 25 (declaration)


state 45

    0 $accept: program $end .

    $default  accept


state 46

   47 arithmetic_expression: expression PLUS . expression

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expression             go to state 77
    lvalue                 go to state 14
    oneormore              go to state 15
    one                    go to state 16
    arithmetic_expression  go to state 17
    comparison             go to state 18
    boolean                go to state 19
    selection              go to state 20
    function_call          go to state 21
    record_creation        go to state 22
    array_creation         go to state 23
    assignment             go to state 24
    loop                   go to state 25


state 47

   48 arithmetic_expression: expression MINUS . expression

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expression             go to state 78
    lvalue                 go to state 14
    oneormore              go to state 15
    one                    go to state 16
    arithmetic_expression  go to state 17
    comparison             go to state 18
    boolean                go to state 19
    selection              go to state 20
    function_call          go to state 21
    record_creation        go to state 22
    array_creation         go to state 23
    assignment             go to state 24
    loop                   go to state 25


state 48

   49 arithmetic_expression: expression TIMES . expression

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expression             go to state 79
    lvalue                 go to state 14
    oneormore              go to state 15
    one                    go to state 16
    arithmetic_expression  go to state 17
    comparison             go to state 18
    boolean                go to state 19
    selection              go to state 20
    function_call          go to state 21
    record_creation        go to state 22
    array_creation         go to state 23
    assignment             go to state 24
    loop                   go to state 25


state 49

   50 arithmetic_expression: expression DIVIDE . expression

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expression             go to state 80
    lvalue                 go to state 14
    oneormore              go to state 15
    one                    go to state 16
    arithmetic_expression  go to state 17
    comparison             go to state 18
    boolean                go to state 19
    selection              go to state 20
    function_call          go to state 21
    record_creation        go to state 22
    array_creation         go to state 23
    assignment             go to state 24
    loop                   go to state 25


state 50

   51 comparison: expression EQ . expression

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expression             go to state 81
    lvalue                 go to state 14
    oneormore              go to state 15
    one                    go to state 16
    arithmetic_expression  go to state 17
    comparison             go to state 18
    boolean                go to state 19
    selection              go to state 20
    function_call          go to state 21
    record_creation        go to state 22
    array_creation         go to state 23
    assignment             go to state 24
    loop                   go to state 25


state 51

   52 comparison: expression NEQ . expression

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expression             go to state 82
    lvalue                 go to state 14
    oneormore              go to state 15
    one                    go to state 16
    arithmetic_expression  go to state 17
    comparison             go to state 18
    boolean                go to state 19
    selection              go to state 20
    function_call          go to state 21
    record_creation        go to state 22
    array_creation         go to state 23
    assignment             go to state 24
    loop                   go to state 25


state 52

   54 comparison: expression LT . expression

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expression             go to state 83
    lvalue                 go to state 14
    oneormore              go to state 15
    one                    go to state 16
    arithmetic_expression  go to state 17
    comparison             go to state 18
    boolean                go to state 19
    selection              go to state 20
    function_call          go to state 21
    record_creation        go to state 22
    array_creation         go to state 23
    assignment             go to state 24
    loop                   go to state 25


state 53

   56 comparison: expression LE . expression

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expression             go to state 84
    lvalue                 go to state 14
    oneormore              go to state 15
    one                    go to state 16
    arithmetic_expression  go to state 17
    comparison             go to state 18
    boolean                go to state 19
    selection              go to state 20
    function_call          go to state 21
    record_creation        go to state 22
    array_creation         go to state 23
    assignment             go to state 24
    loop                   go to state 25


state 54

   53 comparison: expression GT . expression

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expression             go to state 85
    lvalue                 go to state 14
    oneormore              go to state 15
    one                    go to state 16
    arithmetic_expression  go to state 17
    comparison             go to state 18
    boolean                go to state 19
    selection              go to state 20
    function_call          go to state 21
    record_creation        go to state 22
    array_creation         go to state 23
    assignment             go to state 24
    loop                   go to state 25


state 55

   55 comparison: expression GE . expression

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expression             go to state 86
    lvalue                 go to state 14
    oneormore              go to state 15
    one                    go to state 16
    arithmetic_expression  go to state 17
    comparison             go to state 18
    boolean                go to state 19
    selection              go to state 20
    function_call          go to state 21
    record_creation        go to state 22
    array_creation         go to state 23
    assignment             go to state 24
    loop                   go to state 25


state 56

   58 boolean: expression AND . expression

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expression             go to state 87
    lvalue                 go to state 14
    oneormore              go to state 15
    one                    go to state 16
    arithmetic_expression  go to state 17
    comparison             go to state 18
    boolean                go to state 19
    selection              go to state 20
    function_call          go to state 21
    record_creation        go to state 22
    array_creation         go to state 23
    assignment             go to state 24
    loop                   go to state 25


state 57

   57 boolean: expression OR . expression

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expression             go to state 88
    lvalue                 go to state 14
    oneormore              go to state 15
    one                    go to state 16
    arithmetic_expression  go to state 17
    comparison             go to state 18
    boolean                go to state 19
    selection              go to state 20
    function_call          go to state 21
    record_creation        go to state 22
    array_creation         go to state 23
    assignment             go to state 24
    loop                   go to state 25


state 58

   70 assignment: lvalue ASSIGN . expression

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expression             go to state 89
    lvalue                 go to state 14
    oneormore              go to state 15
    one                    go to state 16
    arithmetic_expression  go to state 17
    comparison             go to state 18
    boolean                go to state 19
    selection              go to state 20
    function_call          go to state 21
    record_creation        go to state 22
    array_creation         go to state 23
    assignment             go to state 24
    loop                   go to state 25


state 59

   42 oneormore: oneormore LBRACK . expression RBRACK

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11
